--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,39 @@
 body {
   margin: 0;
 }
+
+.navigate-container {
+  display: flex;
+  justify-content: center;
+}
+
+.nav-right {
+  display: inline-flex;
+  flex: 0.4;
+  justify-content: right;
+}
+
+.nav-left {
+  display: inline-flex;
+  flex: 0.6;
+  justify-content: left;
+}
+
+.nav-button-container {
+  display:inline-flex;
+  padding: 10px;
+  margin: 10px;
+}
+
+.nav-button-container img{
+  display: inline-block;
+  margin-right: 10px;
+  width: 30px;
+}
+
+.nav-button-container h1{
+  display: inline-block;
+  margin: 0;
+  font-size: 15pt;
+  align-content: center;
+}
