--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 body {
+  font-family: Raleway;
   margin: 0;
+  background-color: #131a18;
+}
+
+h1 {
+  color: #ed390c;
+}
+
+p {
+  color:antiquewhite
 }
 
 .navigate-container {
@@ -25,6 +35,14 @@ body {
   margin: 10px;
 }
 
+.nav-button-container h1 {
+  color: antiquewhite;
+}
+
+.nav-button-container :hover {
+  color:#ed390c;
+}
+
 .nav-button-container img{
   display: inline-block;
   margin-right: 10px;
@@ -39,55 +57,70 @@ body {
 }
 
 .film-card-container {
-  width: 300px;
-  height: 520px;
-  border: 5px solid aqua;
+  width: 350px;
+  height: auto;
+  /* border: 2px solid #ed390c; */
+  background-color: #0c1311;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 25px;
   padding: 20px;
+  justify-content: space-between;
 }
 
 .film-card-image-container {
-  width: 300px;
-  height: 300px;
+  width: 320px;
+  height: 320px;
   display: flex;
+  border-radius: 10px;
+  border: 3px solid #ed390c;
   justify-content: center;
   overflow: hidden;
   position: relative;
 }
 
 .film-card-image-container img {
-  width: 300px;
+  width: 320px;
   height:fit-content;
 }
 
 .film-card-image-container #text {
   position: absolute;
-  color: red;
-  background-color: aliceblue;
+  background-color: #ed390c;
   font-size: 15pt;
   padding: 10px;
   right: 0;
   bottom: 0;
+  border-top-left-radius: 10px;
 }
 
 .film-card-image-container #text p {
+  color: antiquewhite;
   margin: 0;
 }
 
 .film-card-information-container {
-  width: 300px;
-  height: 220px;
+  width: 320px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 
 .film-card-information-container #text h1 {
   margin-bottom: 5px;
   margin-top: 10px;
+}
+
+.film-card-information-container #text:hover h1 {
+  color:antiquewhite;
+}
+
+.film-card-information-container #text:hover p {
+  color:#ed390c;
 }
 
 .film-card-information-container #text p {
@@ -107,11 +140,28 @@ body {
   margin-bottom: 10px;
 }
 
-.home-container h1 {
-  margin-bottom: 20px;
+.home-container #header {
+  margin-top: 50px;
+  margin-left: 80px;
+  margin-bottom: 0;
 }
 
 .film-cards-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 40px;
+  margin-top: 20px;
+}
+
+.next-button {
+  background-color: #ed390c;
+  border-radius: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  border: 3px solid transparent;
+}
+
+.next-button:hover {
+  border: 3px solid antiquewhite;
 }
