--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ p {
   color:antiquewhite
 }
 
+a {
+  text-decoration: none;
+}
+
 .nav-container {
   display: flex;
   justify-content: center;
@@ -55,6 +59,14 @@ p {
   color:#ed390c;
 }
 
+.nav-button-container :hover ~ h1 {
+  color:#ed390c;
+}
+
+.nav-button-container :hover > h1 {
+  color:#ed390c;
+}
+
 .nav-button-container img{
   display: inline-block;
   margin-right: 10px;
@@ -77,7 +89,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 25px;
+  margin: 25px auto;
   padding: 20px;
   justify-content: space-between;
 }
@@ -127,13 +139,9 @@ p {
   margin-top: 10px;
 }
 
-.film-card-information-container #text:hover h1 {
+.film-card-information-container :hover h1 {
   color:antiquewhite;
 }
-
-/* .film-card-information-container #text:hover p {
-  color:#ed390c;
-} */
 
 .film-card-information-container #text p {
   margin: 0;
@@ -161,7 +169,7 @@ p {
 .film-cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 40px;
   margin-top: 20px;
 }
@@ -176,4 +184,43 @@ p {
 
 .next-button:hover {
   border: 3px solid antiquewhite;
+}
+
+.film-det-container {
+  margin: 40px;
+}
+
+.film-det-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.film-det-card .film-card-image-container {
+  width: 400px;
+  height: auto;
+  margin-right: 30px;
+}
+
+.film-det-card .film-card-image-container img {
+  width:400px;
+  height: auto;
+}
+
+.film-det-text {
+  width: 700px;
+  pointer-events: none;
+}
+
+.film-det-text #text {
+  font-size: 20pt;
+}
+
+.film-det-text .film-card-information-container {
+  width: auto;
+}
+
+.film-det-back p {
+  font-size: 20pt;
+  margin-bottom: 40px;
 }
