--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-bottom: 60px;
 }
 
 .film-det-card .film-card-image-container {
@@ -225,11 +226,59 @@ a {
   margin-bottom: 40px;
 }
 
-.schedule-time-container {
+.schedule-date-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-bottom: 60px;
+}
+
+.date-button {
+  border: 2px solid #ed390c;
+  border-radius: 10px;
+  height: auto;
+  background-color:#131a18;
+  margin: 10px;
+}
+
+.date-button p {
+  margin: 10px
 }
 
 #date-button-cur p {
   color:#ed390c;
+  font-weight: bold;
+}
+
+.hall-time-container {
+  margin-left: 90px;
+}
+
+.hall-time-buttons {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.hall-time-buttons p {
+  margin: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 5px;
+}
+
+.time-button {
+  margin: 0
+}
+
+.time-button:focus {
+  border: 3px solid #ed390c;
+}
+
+.shedule-container p {
+  font-size: 20pt;
+}
+
+.hall-time-name p {
+  font-size: 15pt;
+  margin: 0;
 }
